--- a/config/macros.dtsi
+++ b/config/macros.dtsi
@@ -1,38 +1,8 @@
-macro_p: macro_p{
+macro_p: macro_pw{
 compatible = "zmk,behavior-macro";
-label = "macro_p";
+label = "macro_pw";
 #binding-cells = <0>;
-bindings = <&kp LEFT_SHIFT>, <&kp B>, <&kp R>;
-};
-macro_quotes: macro_quotes{
-compatible = "zmk,behavior-macro";
-label = "macro_quotes";
-#binding-cells = <0>;
-bindings = <&kp SQT>, <&kp SQT>, <&kp LEFT>;
-};
-macro_dquotes: macro_dquotes{
-compatible = "zmk,behavior-macro";
-label = "macro_dquotes";
-#binding-cells = <0>;
-bindings = <&kp DQT>, <&kp DQT>, <&kp LEFT>;
-};
-macro_braces: macro_braces{
-compatible = "zmk,behavior-macro";
-label = "macro_braces";
-#binding-cells = <0>;
-bindings = <&kp LBRC>, <&kp RBRC>, <&kp LEFT>;
-};
-macro_parens: macro_parens{
-compatible = "zmk,behavior-macro";
-label = "macro_parens";
-#binding-cells = <0>;
-bindings = <&kp LPAR>, <&kp RPAR>, <&kp LEFT>;
-};
-macro_brackets: macro_brackets{
-compatible = "zmk,behavior-macro";
-label = "macro_brackets";
-#binding-cells = <0>;
-bindings = <&kp LBKT>, <&kp RBKT>, <&kp LEFT>;
+bindings = <&kp LS(B)>, <&kp R>, <&kp I>, <&kp N>, <&kp G>, <&kp SPACE>, <&kp M>, <&kp E>, <&kp SPACE>, <&kp A>, <&kp T>, <&kp SPACE>, <&kp L>, <&kp E>, <&kp A>, <&kp S>, <&kp T>, <&kp SPACE>, <&kp L>, <&kp E>, <&kp A>, <&kp S>, <&kp T>, <&kp SPACE>, <&kp LS(N4)>, <&kp N9>;
 };
 macro_kinesis: macro_kinesis{
 compatible = "zmk,behavior-macro";
