--- a/config/macros.dtsi
+++ b/config/macros.dtsi
@@ -2,47 +2,33 @@ macro_pw: macro_pw{
 compatible = "zmk,behavior-macro";
 label = "macro_pw";
 #binding-cells = <0>;
-bindings = <&kp >;
+bindings = <&kp LS(B)>, <&kp R>, <&kp I>, <&kp N>, <&kp G>, <&kp SPACE>, <&kp M>, <&kp E>, <&kp SPACE>, <&kp A>, <&kp T>, <&kp L>, <&kp E>, <&kp A>, <&kp S>, <&kp T>, <&kp SPACE>, <&kp LS(N4)>, <&kp N9>, <&kp TAB>, <&kp ENTER>;
 };
-macro_p: macro_p{
+
+macro_pw: macro_un{
 compatible = "zmk,behavior-macro";
-label = "macro_p";
+label = "macro_un";
 #binding-cells = <0>;
-bindings = ;
+bindings = <&kp LS(E)>, <&kp 7>, <&kp N2>, <&kp N2>, <&kp N1>, <&kp N5>;
 };
-macro_quotes: macro_quotes{
+
+macro_pw: macro_address{
 compatible = "zmk,behavior-macro";
-label = "macro_quotes";
+label = "macro_un";
 #binding-cells = <0>;
-bindings = <&kp SQT>, <&kp SQT>, <&kp LEFT>;
+bindings = <&kp LS(N2)>, <&kp C>, <&kp O>, <&kp M>, <&kp M>, <&kp O>, <&kp N>, <&kp S>, <&kp E>, <&kp C>, <&kp U>, <&kp R>, <&kp I>, <&kp T>, <&kp I>, <&kp Z>, <&kp A>, <&kp T>, <&kp I>, <&kp O>, <&kp N>, <&kp PERIOD>, <&kp C>, <&kp O>, <&kp M>, <&kp TAB>;
 };
-macro_dquotes: macro_dquotes{
+
+macro_pw: macro_jun{
 compatible = "zmk,behavior-macro";
-label = "macro_dquotes";
+label = "macro_jun";
 #binding-cells = <0>;
-bindings = <&kp DQT>, <&kp DQT>, <&kp LEFT>;
+bindings = <&kp C>, <&kp S>, <&kp S>, <&kp SLASH>, <&kp S>, <&kp V>, <&kp C>, <&kp LS(J)>, <&kp E>, <&kp N>, <&kp K>, <&kp I>, <&kp N>, <&kp S>, <&kp LS(s)>, <&kp L>, <&kp A>, <&kp V>, <&kp E>;
 };
-macro_braces: macro_braces{
+
+macro_pw: macro_jpw{
 compatible = "zmk,behavior-macro";
-label = "macro_braces";
+label = "macro_jpw";
 #binding-cells = <0>;
-bindings = <&kp LBRC>, <&kp RBRC>, <&kp LEFT>;
-};
-macro_parens: macro_parens{
-compatible = "zmk,behavior-macro";
-label = "macro_parens";
-#binding-cells = <0>;
-bindings = <&kp LPAR>, <&kp RPAR>, <&kp LEFT>;
-};
-macro_brackets: macro_brackets{
-compatible = "zmk,behavior-macro";
-label = "macro_brackets";
-#binding-cells = <0>;
-bindings = <&kp LBKT>, <&kp RBKT>, <&kp LEFT>;
-};
-macro_kinesis: macro_kinesis{
-compatible = "zmk,behavior-macro";
-label = "macro_kinesis";
-#binding-cells = <0>;
-bindings = <&kp LS(K)>, <&kp I>, <&kp N>, <&kp E>, <&kp S>, <&kp I>, <&kp S>;
+bindings = <&kp Q>, <&kp A>, <&kp Z>, <&kp P>, <&kp L>, <&kp M>, <&kp LS(Q)>, <&kp LS(A)>, <&kp LS(Z)>, <&kp LS(P)>, <&kp LS(L)>, <&kp LS(M)>, <&kp DASH>, <&kp N0>, <&kp DASH>, <&kp EQUALS>;
 };
