--- a/config/macros.dtsi
+++ b/config/macros.dtsi
@@ -8,7 +8,7 @@ macro_pw: macro_pw{
 compatible = "zmk,behavior-macro";
 label = "macro_pw";
 #binding-cells = <0>;
-bindings = <&kp LS(F)>, <&kp I>, <&kp N>, <&kp D>, <&kp SPACE>, <&kp LS(N4)>, <&kp N1>, <&kp LEFT_SHIFT>, <&kp O>, <&kp TAB>, <&kp ENTER>;
+bindings = <&kp LS(F)>, <&kp I>, <&kp N>, <&kp D>, <&kp SPACE>, <&kp LS(N4)>, <&kp N1>, <&kp SPACE>, <&kp O>, <&kp N>, <&kp SPACE>, <&kp LS(A)>, <&kp V>, <&kp E>, <&kp PERIOD>, <&kp SPACE>, <&kp LS(Q)>, <&kp PERIOD>, <&kp TAB>, <&kp ENTER>;
 };
 macro_un: macro_un{
 compatible = "zmk,behavior-macro";
