--- a/config/macros.dtsi
+++ b/config/macros.dtsi
@@ -2,35 +2,41 @@ macro_exit: macro_exit{
 compatible = "zmk,behavior-macro";
 label = "macro_exit";
 #binding-cells = <0>;
+wait-ms = <10>;
 bindings = <&kp E>, <&kp X>, <&kp I>, <&kp T>, <&kp ENTER>;
 };
 macro_pw: macro_pw{
 compatible = "zmk,behavior-macro";
 label = "macro_pw";
 #binding-cells = <0>;
+wait-ms = <10>;
 bindings = <&kp LS(F)>, <&kp I>, <&kp N>, <&kp D>, <&kp SPACE>, <&kp LS(N4)>, <&kp N1>, <&kp SPACE>, <&kp O>, <&kp N>, <&kp SPACE>, <&kp LS(A)>, <&kp V>, <&kp E>, <&kp PERIOD>, <&kp SPACE>, <&kp LS(Q)>, <&kp PERIOD>, <&kp TAB>, <&kp ENTER>;
 };
 macro_un: macro_un{
 compatible = "zmk,behavior-macro";
 label = "macro_un";
 #binding-cells = <0>;
+wait-ms = <10>;
 bindings = <&kp LS(E)>, <&kp N7>, <&kp N2>, <&kp N2>, <&kp N1>, <&kp N5>;
 };
 macro_address: macro_address{
 compatible = "zmk,behavior-macro";
 label = "macro_address";
 #binding-cells = <0>;
+wait-ms = <10>;
 bindings = <&kp LS(N2)>, <&kp C>, <&kp O>, <&kp M>, <&kp M>, <&kp O>, <&kp N>, <&kp S>, <&kp E>, <&kp C>, <&kp U>, <&kp R>, <&kp I>, <&kp T>, <&kp I>, <&kp Z>, <&kp A>, <&kp T>, <&kp I>, <&kp O>, <&kp N>, <&kp PERIOD>, <&kp C>, <&kp O>, <&kp M>, <&kp TAB>;
 };
 macro_jun: macro_jun{
 compatible = "zmk,behavior-macro";
 label = "macro_jun";
 #binding-cells = <0>;
+wait-ms = <10>;
 bindings = <&kp C>, <&kp S>, <&kp S>, <&kp SLASH>, <&kp S>, <&kp V>, <&kp C>, <&kp LS(J)>, <&kp E>, <&kp N>, <&kp K>, <&kp I>, <&kp N>, <&kp S>, <&kp LS(S)>, <&kp L>, <&kp A>, <&kp V>, <&kp E>;
 };
 macro_jpw: macro_jpw{
 compatible = "zmk,behavior-macro";
 label = "macro_jpw";
 #binding-cells = <0>;
+wait-ms = <10>;
 bindings = <&kp Q>, <&kp A>, <&kp Z>, <&kp P>, <&kp L>, <&kp M>, <&kp LS(Q)>, <&kp LS(A)>, <&kp LS(Z)>, <&kp LS(P)>, <&kp LS(L)>, <&kp LS(M)>, <&kp MINUS>, <&kp N0>, <&kp MINUS>, <&kp EQUAL>;
 };
