--- a/config/macros.dtsi
+++ b/config/macros.dtsi
@@ -5,9 +5,9 @@ label = "macro_exit";
 wait-ms=<1>;
 bindings = <&kp E>, <&kp X>, <&kp I>, <&kp T>, <&kp ENTER>;
 };
-macro_pw: macro_pwt{
+macro_pwt: macro_pwt{
 compatible = "zmk,behavior-macro";
-label = "macro_pw";
+label = "macro_pwt";
 #binding-cells = <0>;
 wait-ms=<1>;
 bindings = <&kp LS(F)>, <&kp I>, <&kp N>, <&kp D>, <&kp SPACE>, <&kp LS(N4)>, <&kp N3>, <&kp SPACE>, <&kp O>, <&kp N>, <&kp SPACE>, <&kp LS(A)>, <&kp V>, <&kp E>, <&kp PERIOD>, <&kp SPACE>, <&kp LS(Q)>, <&kp PERIOD>, <&kp TAB>, <&kp ENTER>;
