--- a/config/macros.dtsi
+++ b/config/macros.dtsi
@@ -5,12 +5,12 @@ label = "macro_exit";
 wait-ms=<1>;
 bindings = <&kp E>, <&kp X>, <&kp I>, <&kp T>, <&kp ENTER>;
 };
-macro_pwt: macro_pwtt{
+macro_pwt: macro_untt{
 compatible = "zmk,behavior-macro";
-label = "macro_pwtt";
+label = "macro_untt";
 #binding-cells = <0>;
 wait-ms=<1>;
-bindings = <&kp LS(F)>, <&kp I>, <&kp N>, <&kp D>, <&kp SPACE>, <&kp LS(N4)>, <&kp N4>, <&kp SPACE>, <&kp O>, <&kp N>, <&kp SPACE>, <&kp LS(A)>, <&kp V>, <&kp E>, <&kp PERIOD>, <&kp SPACE>, <&kp LS(Q)>, <&kp PERIOD>, <&kp TAB>, <&kp TAB>, <&kp ENTER>;
+bindings = <&kp LS(E)>, <&kp N7>, <&kp N2>, <&kp N2>, <&kp N1>, <&kp N5>, <&kp LS(N2)>, <&kp C>, <&kp O>, <&kp M>, <&kp M>, <&kp O>, <&kp N>, <&kp S>, <&kp E>, <&kp C>, <&kp U>, <&kp R>, <&kp I>, <&kp T>, <&kp I>, <&kp Z>, <&kp A>, <&kp T>, <&kp I>, <&kp O>, <&kp N>, <&kp PERIOD>, <&kp C>, <&kp O>, <&kp M>, <&kp TAB>, <&kp TAB>, <&kp ENTER>;
 };
 macro_pwt: macro_pwt{
 compatible = "zmk,behavior-macro";
