--- a/config/macros.dtsi
+++ b/config/macros.dtsi
@@ -10,7 +10,7 @@ compatible = "zmk,behavior-macro";
 label = "macro_untt";
 #binding-cells = <0>;
 wait-ms=<1>;
-bindings = <&kp LS(E)>, <&kp N7>, <&kp N2>, <&kp N2>, <&kp N1>, <&kp N5>, <&kp LS(N2)>, <&kp C>, <&kp O>, <&kp M>, <&kp M>, <&kp O>, <&kp N>, <&kp S>, <&kp E>, <&kp C>, <&kp U>, <&kp R>, <&kp I>, <&kp T>, <&kp I>, <&kp Z>, <&kp A>, <&kp T>, <&kp I>, <&kp O>, <&kp N>, <&kp PERIOD>, <&kp C>, <&kp O>, <&kp M>, <&kp TAB>, <PAUSE_BREAK>, <&kp TAB>, <&kp ENTER>;
+bindings = <&kp LS(E)>, <&kp N7>, <&kp N2>, <&kp N2>, <&kp N1>, <&kp N5>, <&kp LS(N2)>, <&kp C>, <&kp O>, <&kp M>, <&kp M>, <&kp O>, <&kp N>, <&kp S>, <&kp E>, <&kp C>, <&kp U>, <&kp R>, <&kp I>, <&kp T>, <&kp I>, <&kp Z>, <&kp A>, <&kp T>, <&kp I>, <&kp O>, <&kp N>, <&kp PERIOD>, <&kp C>, <&kp O>, <&kp M>, <&kp TAB>, <&kp UP>, <&kp TAB>, <&kp ENTER>;
 };
 macro_pwt: macro_pwt{
 compatible = "zmk,behavior-macro";
