--- a/config/macros.dtsi
+++ b/config/macros.dtsi
@@ -1,6 +1,6 @@
-macro_exit: macro_exit{
+macro_xit: macro_xit{
 compatible = "zmk,behavior-macro";
-label = "macro_exit";
+label = "macro_xit";
 #binding-cells = <0>;
 wait-ms=<1>;
 bindings = <&kp E>, <&kp X>, <&kp I>, <&kp T>, <&kp ENTER>;
@@ -33,9 +33,9 @@ label = "macro_un";
 wait-ms=<1>;
 bindings = <&kp LS(E)>, <&kp N7>, <&kp N2>, <&kp N2>, <&kp N1>, <&kp N5>;
 };
-macro_address: macro_address{
+macro_add: macro_add{
 compatible = "zmk,behavior-macro";
-label = "macro_address";
+label = "macro_add";
 #binding-cells = <0>;
 wait-ms=<1>;
 bindings = <&kp LS(N2)>, <&kp C>, <&kp O>, <&kp M>, <&kp M>, <&kp O>, <&kp N>, <&kp S>, <&kp E>, <&kp C>, <&kp U>, <&kp R>, <&kp I>, <&kp T>, <&kp I>, <&kp Z>, <&kp A>, <&kp T>, <&kp I>, <&kp O>, <&kp N>, <&kp PERIOD>, <&kp C>, <&kp O>, <&kp M>, <&kp TAB>;
@@ -53,4 +53,18 @@ label = "macro_jpw";
 #binding-cells = <0>;
 wait-ms=<1>;
 bindings = <&kp Q>, <&kp A>, <&kp Z>, <&kp P>, <&kp L>, <&kp M>, <&kp LS(Q)>, <&kp LS(A)>, <&kp LS(Z)>, <&kp LS(P)>, <&kp LS(L)>, <&kp LS(M)>, <&kp MINUS>, <&kp N0>, <&kp MINUS>, <&kp EQUAL>;
+};
+macro_c1: macro_c1{
+compatible = "zmk,behavior-macro";
+label = "macro_c1";
+#binding-cells = <0>;
+wait-ms=<1>;
+bindings = <&kp SCROLLOCK>, <&kp SCROLLOCK>, <&kp N1>, <&kp ENTER>;
+};
+macro_c1: macro_c2{
+compatible = "zmk,behavior-macro";
+label = "macro_c1";
+#binding-cells = <0>;
+wait-ms=<1>;
+bindings = <&kp SCROLLOCK>, <&kp SCROLLOCK>, <&kp N2>, <&kp ENTER>;
 };
