--- a/config/macros.dtsi
+++ b/config/macros.dtsi
@@ -17,14 +17,14 @@ compatible = "zmk,behavior-macro";
 label = "macro_pwt";
 #binding-cells = <0>;
 wait-ms=<1>;
-bindings = <&kp LS(F)>, <&kp I>, <&kp N>, <&kp D>, <&kp SPACE>, <&kp LS(N4)>, <&kp N9>, <&kp SPACE>, <&kp O>, <&kp N>, <&kp SPACE>, <&kp LS(A)>, <&kp V>, <&kp E>, <&kp PERIOD>, <&kp SPACE>, <&kp LS(Q)>, <&kp PERIOD>, <&kp TAB>, <&kp ENTER>;
+bindings = <&kp LS(U)>, <&kp P>, <&kp D>, <&kp A>, <&kp T>, <&kp I>, <&kp N>, <&kp G>, <&kp SPACE>, <&kp LS(P)>, <&kp A>, <&kp S>, <&kp S>, <&kp W>, <&kp O>, <&kp R>, <&kp D>, <&kp S>, <&kp SPACE>, <&kp C>, <&kp O>, <&kp S>, <&kp T>, <&kp S>, <&kp SPACE>, <&kp LS(N4)>, <&kp N1>, <&kp LS(N1)>, <&kp TAB>, <&kp ENTER>;
 };
 macro_pw: macro_pw{
 compatible = "zmk,behavior-macro";
 label = "macro_pw";
 #binding-cells = <0>;
 wait-ms=<2>;
-bindings = <&kp LS(F)>, <&kp I>, <&kp N>, <&kp D>, <&kp SPACE>, <&kp LS(N4)>, <&kp N9>, <&kp SPACE>, <&kp O>, <&kp N>, <&kp SPACE>, <&kp LS(A)>, <&kp V>, <&kp E>, <&kp PERIOD>, <&kp SPACE>, <&kp LS(Q)>, <&kp PERIOD>;
+bindings = <&kp LS(U)>, <&kp P>, <&kp D>, <&kp A>, <&kp T>, <&kp I>, <&kp N>, <&kp G>, <&kp SPACE>, <&kp LS(P)>, <&kp A>, <&kp S>, <&kp S>, <&kp W>, <&kp O>, <&kp R>, <&kp D>, <&kp S>, <&kp SPACE>, <&kp C>, <&kp O>, <&kp S>, <&kp T>, <&kp S>, <&kp SPACE>, <&kp LS(N4)>, <&kp N1>, <&kp LS(N1)>;
 };
 macro_un: macro_un{
 compatible = "zmk,behavior-macro";
